# homeassistant_gitops

./: .gitignore  AGENTS.md  README.md  repository.yaml
homeassistant_gitops/: CHANGELOG.md  DOCS.md  Dockerfile  Makefile  README.md  build.yaml  config.yaml  pyproject.toml
homeassistant_gitops/docs/: feature-checklist.md
homeassistant_gitops/docs/prs/: README_PR.md  pr-14-directory-tree.md  pr-15-add-to-gitignore.md  pr-15-add-to=gitignore.md
homeassistant_gitops/docs/prs/completed/: pr-00-automation-id-spike.md  pr-01-automation-id-management.md  pr-02-modules-browser-grouping.md  pr-03-preview-sync.md  pr-04-items-api.md  pr-05-items-ui-editor.md  pr-06-bulk-move-delete-unassign.md  pr-07-exports-csv.md  pr-08-cli-validate-build-update.md  pr-09-automation-id-normalization.md  pr-10-gitops-templates.md  pr-11-export-groups-csv.md  pr-12-yaml-modules-groups-domain.md  pr-13-groups-dashboard.md
homeassistant_gitops/rootfs/app/: gitignore_example  main.py
homeassistant_gitops/rootfs/app/gitops_bridge/: api.py  cli_installer.py  config_store.py  exports.py  fs_utils.py  git_ops.py  gitignore_ops.py  groups.py  ha_services.py  settings.py  ssh_ops.py  watchers.py  yaml_modules.py  yaml_tags.py
homeassistant_gitops/rootfs/app/static/: app.css  app.js  index.html
homeassistant_gitops/tests/: test_automation_id_spike.py  test_automation_ids.py  test_cli_installer.py  test_exports.py  test_git_ui.py  test_groups.py  test_lovelace_storage_dashboards.py  test_module_items.py  test_module_operations.py  test_validate_cli.py  test_yaml_modules.py
(+4 files in other folders)
